--- a/README.org
+++ b/README.org
@@ -13,7 +13,7 @@ The goal is to produce /minimal/ Debian kernel images for Live CDs, with a *focu
 
 - The system should be able to successfully boot from =UEFI= or =BIOS= mode on most machines
 - The system should successfully power off without hanging
-- The system should support containerization (=podman=, =docker=, etc.)
+- The system should support "containerization" (=podman=, =docker=, etc.)
 - The system should support =iptables=
 - The system should support popular file-systems used in Live CDs such as =squashfs=
 
