--- a/README.org
+++ b/README.org
@@ -4,7 +4,7 @@
 [[https://github.com/yveszoundi/kernel-deblive-smallserver/blob/main/LICENSE][file:http://img.shields.io/badge/license-GNU%20GPLv3-blue.svg]] [[https://github.com/yveszoundi/kernel-deblive-smallserver/actions/workflows/build.yml][file:https://github.com/yveszoundi/kernel-deblive-smallserver/actions/workflows/build.yml/badge.svg]]
 
 
-/This is still WORK IN PROGRESS and it's only being tested under QEMU/.
+/tl;dr Smaller kernel image for server-centric Debian-based Live CDs. This is NOT for Desktop systems./
 
 * What is this?
 
@@ -16,6 +16,7 @@ The goal is to produce /minimal/ Debian kernel images for Live CDs, with a *focu
   - There will be occasionally other releases for bleeding edge versions
 - This is for both =amd64= and =aarch64= architectures  
 - Drivers for audio, video or other "non-meaningful" settings are discarded
+- The resulting kernel image installation size should be as small as possible
 
 ** Main objectives
 
@@ -24,6 +25,7 @@ The goal is to produce /minimal/ Debian kernel images for Live CDs, with a *focu
 - The system should support "containerization" (=podman=, =docker=, etc.)
 - The system should support =iptables=
 - The system should support popular file-systems used in Live CDs such as =squashfs=
+- The system Live media size should be reduced significantly with provided kernel packages
 
 ** Initial use-case
 
